--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
     <properties>
         <java.version>11</java.version>
     </properties>
-    <dependencies>
-    </dependencies>
 
     <build>
         <plugins>
@@ -38,7 +36,18 @@
                     </excludes>
                 </configuration>-->
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <developerConnection>scm:git:git@github.com:Jergs/auction-house.git</developerConnection>
+    </scm>
 
 </project>
