Small pom hotfixes

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.demo</groupId>
     <artifactId>auction-house</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>auction-house</name>
     <description>auction-house</description>
     <properties>
@@ -46,8 +46,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:Jergs/auction-house.git</developerConnection>
-      <tag>auction-house-0.0.1</tag>
+        <developerConnection>scm:git:https://github.com/Jergs/auction-house.git</developerConnection>
   </scm>
 
 </project>
