--- a/auction-house-web/pom.xml
+++ b/auction-house-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>auction-house</artifactId>
         <groupId>com.demo</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,7 +18,7 @@
         <dependency>
             <artifactId>auction-house-data</artifactId>
             <groupId>com.demo</groupId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
