--- a/auction-house-web/src/main/resources/application.properties
+++ b/auction-house-web/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.banner.image.location=banner.png
 spring.messages.basename=messages/messages
-spring.profiles.active=map
+spring.profiles.active=jpa
+spring.datasource.url=jdbc:h2:mem:testdb
