--- a/auction-house-web/src/main/resources/application.properties
+++ b/auction-house-web/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.banner.image.location=banner.png
 spring.messages.basename=messages/messages
 spring.profiles.active=jpa
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
