Set up postgres db Refactoring

--- a/auction-house-web/src/main/resources/application.properties
+++ b/auction-house-web/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.banner.image.location=banner.png
 spring.messages.basename=messages/messages
 spring.profiles.active=jpa
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.password=postgres
+spring.datasource.username=postgres
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
