--- a/pom.xml
+++ b/pom.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>auction-house-data</module>
-        <module>auction-house-web</module>
-    </modules>
-    <parent>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <packaging>pom</packaging>
+  <modules>
+    <module>auction-house-data</module>
+    <module>auction-house-web</module>
+  </modules>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.4.1</version>
+    <relativePath/>
+  </parent>
+  <groupId>com.demo</groupId>
+  <artifactId>auction-house</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>auction-house</name>
+  <description>auction-house</description>
+  <properties>
+    <java.version>21</java.version>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.demo</groupId>
-    <artifactId>auction-house</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>auction-house</name>
-    <description>auction-house</description>
-    <properties>
-        <java.version>11</java.version>
-    </properties>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <goals>install</goals>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <goals>install</goals>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <scm>
-        <developerConnection>scm:git:git@github.com:Jergs/auction-house.git</developerConnection>
-    </scm>
+  <scm>
+    <developerConnection>scm:git:https://github.com/Jergs/auction-house.git</developerConnection>
+  </scm>
 
 </project>
